<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activitiesAndIntent.ActivitiesAndIntentActivity">

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_0"
            android:textSize="48sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCount"
            android:background="@drawable/selector_btn"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tambah" />

    <Button
        android:id="@+id/btnGoToExplicitIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_go_to_explicit_intent" />
    <Button
        android:id="@+id/btnGoToImplicitIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_go_to_implicit_intent" />

</LinearLayout>